--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body {
   flex-direction: column;
   justify-content: center;
   margin-left: 8rem;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
 }
 
 .sneak {
@@ -170,7 +170,7 @@ body {
   /* margin-top: 0px; */
   /* padding-top: 0px; */
   font-weight: bold;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .fall {
@@ -178,7 +178,7 @@ body {
   font-size: 3rem;
   font-weight: bold;
   padding-top: 0.5rem;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .para {
@@ -190,9 +190,9 @@ body {
 
 .montant {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   padding-top: 2rem;
-  /*border: 1px solid rgb(102, 255, 0);*/
+  /* border: 1px solid rgb(102, 255, 0); */
 }
 
 .valu {
@@ -214,29 +214,34 @@ body {
 
 .pourcentage {
   display: flex;
-  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  /* flex-direction: column; */
+  color: hsl(26, 100%, 55%);
+  margin-top: 10px;
   margin-left: 1rem;
-  padding-left: 2px;
-  padding-right: 2px;
+  margin-bottom: 3rem;
+  padding-left: 5px;
+  padding-right: 5px;
   background-color: blanchedalmond;
-  height: 30%;
+  /* height: 30%; */
   font-weight: bolder;
   border-radius: 5px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
-.yes1 {
-  display: flex;
-  align-items: center;
-  color: hsl(26, 100%, 55%);
-  height: 65%;
-  /* border: 1px solid black;*/
-}
+/* .yes1 { */
+/* display: flex; */
+/* align-items: center; */
+/* color: hsl(26, 100%, 55%); */
+/* height: 100%; */
+/* border: 1px solid black; */
+/* } */
 
-.yes2 {
-  height: 35%;
-  /* border: 1px solid blue;*/
-}
+/* .yes2 { */
+/* height: 35%; */
+/* border: 1px solid blue; */
+/* } */
 
 .foot {
   display: flex;
