--- a/style.css
+++ b/style.css
@@ -10,16 +10,25 @@ body {
   font-family: "Kumbh Sans", sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   height: 100vh;
   order: 1px solid black;
 }
 
 .bloc_principal {
+  margin-top: 2rem;
   margin-left: 12rem;
   margin-right: 12rem;
   /* border: 1px solid red; */
+}
+
+
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* border: 1px solid yellowgreen; */
 }
 
 .bloc_one {
@@ -28,12 +37,10 @@ body {
   /*border: 1px solid orangered;*/
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  /* border: 1px solid yellowgreen; */
+.burger{
+  display: none;
 }
+
 
 .logo {
   /*border: 1px solid blue;*/
@@ -281,4 +288,39 @@ body {
   text-decoration: none;
   margin-left: 0.5rem;
   /*border: 1px solid black;*/
+}
+
+@media screen and (max-width: 512px){
+  .menu{
+    display: none;
+  }
+
+  .bloc_one{
+    align-items: center;
+    margin-left: 15rem;
+    border: 1px solid salmon;
+  }
+
+.burger{
+  display: flex;
+  border: 1px solid salmon;
+}
+
+.logo{
+  margin-left: 1rem;
+  border: 1px solid rgb(55, 0, 255);
+}
+
+
+  .bloc_two{
+    /* justify-content: space-around; */
+    padding-right: 0px;
+    /* margin-right: 15rem; */
+    border: 1px solid salmon;
+  }
+
+
+
+
+
 }
